--- a/AuctionManagementSystem/Views/Shared/_Layout.cshtml
+++ b/AuctionManagementSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 <!doctype html>
 <html lang="en">
 <head>
@@ -28,15 +29,6 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/sweetalert2/6.3.8/sweetalert2.min.js"></script>
 </head>
 <body>
-    <div class="preloader">
-        <div class="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-
     <!-- ===============  search area start =============== -->
 
     <div class="mobile-search">
@@ -87,9 +79,17 @@
                             </div>
                             <ul>
                                 <li><a asp-action="Index" asp-controller="Home">Auctions</a></li>
-                                <li><a asp-action="AddVehicle" asp-controller="Vehicle">Sell A Car</a></li>
+                                @if (@HttpContextAccessor.HttpContext.Session.GetString("UserName") == "")
+                                {
+                                    <li><a asp-action="vehiclesubmission" asp-controller="Vehicle">Sell A Car</a></li>
+                                }
+                                else
+                                {
+                                    <li><a asp-action="Login" asp-controller="Account">Sell A Car</a></li>
+                                }
+                              
                                 <li><a asp-action="About" asp-controller="Home">About</a></li>
-                               @* <li class="has-child-menu">
+                                <li class="has-child-menu">
                                     <a href="javascript:void(0)">Home</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
@@ -105,33 +105,27 @@
                                     <a href="javascript:void(0)">auction</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
-                                        <li><a href="auction.html">auction</a></li>
+                                        <li><a href="~/Vehicle/VehicleAuction">auction</a></li>
                                         <li><a href="auction-details.html">auction details</a></li>
                                     </ul>
                                 </li>
+                              
                                 <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Pages</a>
+                                    <a href="javascript:void(0)">SignUp/Login</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
-                                        <li><a href="about.html">about</a></li>
-                                        <li><a href="winner.html">winner</a></li>
-                                        <li><a href="login">login</a></li>
-                                        <li><a href="register">register</a></li>
-                                        <li><a href="faq.html">faq</a></li>
-                                        <li><a href="privacy.html">Privacy Policy</a></li>
-                                        <li><a href="404.html">Error</a></li>
+                                        @if (@HttpContextAccessor.HttpContext.Session.GetString("UserName") == "")
+                                        {
+                                        }
+                                        else
+                                        {
+                                            <li><a href="blog-details.html">Logout</a></li>
+                                        }
+                                        <li><a href="Account/Login">login</a></li>
+                                        <li><a href="Account/Register">SignUp</a></li>
+                                        
                                     </ul>
                                 </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Blog</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-standard.html">Blog Standard</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>*@
-                                <li><a asp-action="Contact" asp-controller="Home">contact</a></li>
                             </ul>
 
                             <div class="contact-mail inner-contact-mail mt-5 d-block d-xl-none">
@@ -246,7 +240,7 @@
                                         <li><a href="faq.html">FAQ</a></li>
                                         <li><a href="#">Borrow</a></li>
                                         <li><a href="contact.html">License Agreement</a></li>
-                                        <li><a href="auction.html">Sell your Product</a></li>
+                                        <li><a href="Account/login">Sell your Product</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -291,7 +285,7 @@
     <script src="~/js/swiper-bundle.min.js"></script>
     <script src="~/js/jquery.magnific-popup.min.js"></script>
     <!-- Custom JavaScript -->
-    <script src="~/js/main.js"></script>
+@*    <script src="~/js/main.js"></script>*@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </body>
 </html>
