--- a/AuctionManagementSystem/Views/Vehicle/AuctionDetails.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/AuctionDetails.cshtml
@@ -8,37 +8,11 @@
 
 <head>
     <title>Bidgen - Bid and Auction HTML Template</title>
-
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- favicon -->
-    <link rel="icon" href="assets/images/favicon.png" type="image/gif" sizes="20x20">
-    <!-- Swiper bundle Css -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-    <!-- Boxicon -->
-    <link rel="stylesheet" href="assets/css/boxicons.min.css">
-    <!-- Bootstarp 5 icons -->
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
-
 </head>
 
 <body>
 
-    <div class="preloader">
-        <div class="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
+    
     <!-- ===============  search area start =============== -->
 
     <div class="mobile-search">
@@ -57,110 +31,6 @@
             </div>
         </div>
     </div>
-
-    <!-- ===============  search area end =============== -->
-    <!-- ===============  header area start =============== -->
-    <header>
-        <div class="header-area header-style-one px-md-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-2 align-items-center d-xl-flex d-lg-block">
-                        <div class="nav-logo d-flex justify-content-between align-items-center">
-                            <a href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
-
-                            <div class="d-flex align-items-center gap-4">
-                                <ul class="nav-actions nav-inner-actions d-flex d-xl-none">
-                                    <li class="search-btn"><i class="bi bi-search"></i></li>
-                                </ul>
-                                <div class="mobile-menu d-flex ">
-                                    <a href="javascript:void(0)" class="hamburger d-block d-xl-none">
-                                        <span class="h-top"></span>
-                                        <span class="h-middle"></span>
-                                        <span class="h-bottom"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-7 d-flex justify-content-center ">
-                        <nav class="main-nav">
-                            <div class="inner-logo d-xl-none text-center mt-4">
-                                <a href="#"><img src="assets/images/logo-dark.png" alt=""></a>
-                            </div>
-                            <ul>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Home</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">Home Accessories </a></li>
-                                        <li><a href="index-car.html">Home Car</a></li>
-                                        <li><a href="index-land.html">Home Land</a></li>
-                                        <li><a href="index-art-light.html">Home Light-art</a></li>
-                                        <li><a href="index-art-dark.html">Home Dark-art</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Auction</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="auction.html">auction</a></li>
-                                        <li><a href="auction-details.html">auction details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Pages</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="about.html">about</a></li>
-                                        <li><a href="winner.html">winner</a></li>
-                                        <li><a href="login.html">login</a></li>
-                                        <li><a href="register.html">register</a></li>
-                                        <li><a href="faq.html">faq</a></li>
-                                        <li><a href="privacy.html">Privacy Policy</a></li>
-                                        <li><a href="404.html">Error</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Blog</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-standard.html">Blog Standard</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">contact</a></li>
-                            </ul>
-
-                            <div class="contact-mail inner-contact-mail mt-5 d-block d-xl-none">
-                                <span>Message Us</span>
-                                <a href="mailto:support@example.com">support@example.com</a>
-                            </div>
-                        </nav>
-                    </div>
-                    <div class="col-xl-3 d-xl-flex align-items-center justify-content-end d-none">
-                        <div class="nav-right d-flex align-items-center">
-                            <ul class="nav-actions">
-                                <li class="search-btn"><i class="bi bi-search"></i></li>
-                            </ul>
-                            <div class="contact-no d-flex align-items-center">
-                                <div class="contact-icon">
-                                    <img src="assets/images/icon/phone-w.svg" alt="">
-                                </div>
-                                <div class="contact-info">
-                                    <p>Hot Line Number</p>
-                                    <h6><a href="tel:+8801761111456">+880 176 1111 456</a></h6>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- ===============  header area end =============== -->
-    <!-- =============== breadcrumb area start =============== -->
     <div class="breadcrumb breadcrumb-style-one mb-0 ">
         <div class="container">
             <div class="col-lg-12 text-center">
@@ -295,6 +165,8 @@
                     </div>
 
                 </div>
+                @if(Model.Count()>0)
+                {
                 <div class="col-lg-6">
                     <div class="widget-right-area">
                         <h4>@Model.FirstOrDefault().FullName</h4>
@@ -317,13 +189,14 @@
                         <div class="single-widget">
                             <h5 class="wdget-title wdget-title2">Bid Now</h5>
                             <p class="widget-subtitle">Bid Amount : Minimum Bid 20.00$</p>
-                            <form class="widget-form">
-                                <div class="form-group d-flex justify-content-center align-items-center">
-                                    <input type="text" placeholder="$00.00">
-                                    <button class="widget-btn">Place Bid</button>
-                                </div>
+                                <div class="widget-form">
+                                    <div class="form-group d-flex justify-content-center align-items-center">
+                                        <input type="text" placeholder="$00.00" id="txtBidAmount">
+                                        <button class="widget-btn" id="btn_PlaceBid" onclick="SaveBid()">Place Bid</button>
 
-                            </form>
+                                    </div>
+
+                                </div>
                         </div>
                         <div class="single-widget">
                             <h5 class="wdget-title">Bidding History</h5>
@@ -357,6 +230,7 @@
                         </div>
                     </div>
                 </div>
+                }
             </div>
         </div>
     </section>
@@ -462,114 +336,71 @@
 
     <!-- =============== best auction end =============== -->
     <!-- =============== footer area start=============== -->
-    <footer class="footer-area footer-style-one mt-110">
-        <div class="container">
-            <div class="footer-main">
-                <div class="row gy-5 d-flex justify-content-center">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer-widget">
-                            <form action="#" id="subscribe_form">
-                                <h3 class="form-title">subscribe us</h3>
-                                <div class="form-wrap d-flex align-items-center">
-                                    <input type="email" placeholder="Enter Your Email">
-                                    <button type="submit">Send</button>
-                                </div>
-                            </form>
 
-                            <div class="footer-contact-links">
-                                <div class="contact-option">
-                                    <div class="icon">
-                                        <i class="bi bi-telephone-plus"></i>
-                                    </div>
-                                    <div class="link">
-                                        <a href="tel:8801761111456">+880 176 1111 456</a>
-                                    </div>
-                                </div>
-                                <div class="contact-option">
-                                    <div class="icon">
-                                        <i class="bi bi-envelope"></i>
-                                    </div>
-                                    <div class="link">
-                                        <a href="info@example.com">info@example.com</a>
-                                    </div>
-                                </div>
-                                <div class="contact-option">
-                                    <div class="icon">
-                                        <i class="bi bi-geo-alt"></i>
-                                    </div>
-                                    <div class="link">
-                                        <a href="tel:8801761111456">168/170, Avenue 01, ADDRESS, Bangladesh</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6">
-                        <div class="footer-widget">
-                            <h5 class="widget-title">Quick Links</h5>
-
-                            <ul class="widget-links">
-                                <li><a href="login.html">My Account</a></li>
-                                <li><a href="about.html">Affiliate Program</a></li>
-                                <li><a href="contact.html">Lawyer Consulting</a></li>
-                                <li><a href="#">Sorteo Locemses</a></li>
-                                <li><a href="privacy.html">Privacey Policy</a></li>
-                                <li><a href="#">Term & Condition</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6">
-                        <div class="footer-widget">
-                            <h5 class="widget-title">Help Center</h5>
-                            <ul class="widget-links">
-                                <li><a href="contact.html">Help Center</a></li>
-                                <li><a href="faq.html">FAQ</a></li>
-                                <li><a href="#">Borrow</a></li>
-                                <li><a href="contact.html">License Agreement</a></li>
-                                <li><a href="#">Sell your Product</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="footer-widget text-start">
-                            <div class="footer-disc">
-                                <a href="index.html"><img src="assets/images/logo.png" alt=""></a>
-
-                                <p>Duis luctus risus ut velit aliquam, sed fringilla odio gravida. In vitae sagittis neque, eget vestibulum enim. Pellentesque ante odio.</p>
-                            </div>
-
-                            <ul class="footer-social-links justify-content-start">
-                                <li><a href="https://www.facebook.com"><i class='bx bxl-facebook'></i></a></li>
-                                <li><a href="https://twitter.com"><i class='bx bxl-twitter'></i></a></li>
-                                <li><a href="https://www.pinterest.com"><i class='bx bxl-pinterest'></i></a></li>
-                                <li><a href="https://www.instagram.com"><i class='bx bxl-instagram'></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="copyright row align-items-center">
-                <div class="col-lg-6 col-md-6 order-1 order-md-0 text-center text-md-start mt-3 mt-md-0">
-                    <p>Copyright 2022 <a href="#">Bidgen</a> | Design By <a href="https://www.egenslab.com">Egens Theme</a></p>
-                </div>
-                <div class="col-lg-6 col-md-6 order-0 order-md-1">
-                    <div class="acceptable-cards float-lg-end text-center text-md-start">
-                        <img src="assets/images/icon/payment-cards.png" alt="" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- =============== footer area end=============== -->
-    <!--Javascript -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/jquery.nice-select.js"></script>
     <!-- Custom JavaScript -->
-    <script src="assets/js/main.js"></script>
+  @*  <script src="assets/js/main.js"></script>*@
+    <script>
+          function SaveBid()
+          {
+             debugger;
+            const urlParams = new URLSearchParams(window.location.search);
+            const AvId = urlParams.get('AvId');
+            var BidAmount = $("#txtBidAmount").val();
+            if (BidAmount=="")
+            {
+                swal("Error", "Bid Amount Can't be Null.", "error");
+                return false;
+            }
+            $.ajax({
+                type: "POST",
+                url: "/Vehicle/SaveBid",
+                data: { PostId: AvId, amount: BidAmount },
+                dataType: "json",
+                success: function (data) {
+                    if (data == 1)
+                    {
+                        swal("Saved!", "Your Bid Has Been Saved Succesfully.", "success");
+                        setTimeout(function () {
+                            location.reload();
+                        }, 3000);
+                        location.href = 'Index';
+                        return true
+                    }
+                    else
+                    {
+                        swal("Error!", "Something went wrong.", "error");
+                        return false;
+                    }
+                },
+                error: function () {
+                    swal("Error", "Something went wrong.", "error");
+                }
+            });
+            return false;
+          }
+    </script>
+    <script type="text/javascript">
+        //$("body").on("click", "#btn_PlaceBid", function () {
+        //    debugger;
+        //    const urlParams = new URLSearchParams(window.location.search);
+        //    const myParam = urlParams.get('AvId');
+        //    //var txtName = $("#txtName");
+        //    //var txtCountry = $("#txtCountry");
+        //    var _customer = {};
+        //    _customer.Name = txtName.val();
+        //    _customer.Country = txtCountry.val();
+        //    $.ajax({
+        //        type: "POST",
+        //        url: "/Home/InsertCustomer",
+        //        data: JSON.stringify(_customer),
+        //        contentType: "application/json; charset=utf-8",
+        //        dataType: "json",
+        //        success: function (r) {
+        //            alert("CustomerId: " + r.CustomerId.toString());
+        //        }
+        //    });
+        //});
+    </script>
 </body>
 
 </html>
